--- a/ProjetoCSS-inicio/index.html
+++ b/ProjetoCSS-inicio/index.html
@@ -32,7 +32,7 @@
                         significado e a estrutura do conteúdo da web. 
                         Outras tecnologias além do HTML geralmente são usadas para descrever a aparência/apresentação (CSS) 
                         ou a funcionalidade/comportamento (JavaScript) de uma página da web.</p>
-                    <a href="#">Saiba mais</a>
+                    <a href="#" class = "btn">Saiba mais</a>
                 </article>
 
                 <article> 
@@ -43,7 +43,7 @@
                         uma linguagem de estilo (en-US) usada para descrever a apresentação de 
                         um documento escrito em HTML ou em XML (incluindo várias linguagens em XML como SVG, MathML ou XHTML). 
                         O CSS descreve como elementos são mostrados na tela, no papel, na fala ou em outras mídias.</p>
-                    <a href="#">Saiba mais</a>
+                    <a href="#" class = "btn">Saiba mais</a>
                 </article>
 
                 <article> 
@@ -55,14 +55,14 @@
                         em vários outros ambientes sem browser, tais como node.js, Apache CouchDB e Adobe Acrobat. 
                         O JavaScript é uma linguagem baseada em protótipos, multi-paradigma e dinâmica, suportando estilos de orientação a objetos,
                         imperativos e declarativos (como por exemplo a programação funcional). Saiba mais sobre o JavaScript.</p>
-                    <a href="#">Saiba mais</a>
+                    <a href="#" class = "btn">Saiba mais</a>
                 </article>
 
             </section>
         </div>
     </main>
     <footer>
-        Copyright © 2016
+        Copyright &copy; 2025
     </footer>
     
 </body>
